fix(meesenger): Add overflow hidden to messenger widget styles
Added 'overflow: hidden' to the .lf-messenger__loader element to prevent content from overflowing its container.

--- a/web/src/styles/widgets/_messenger.scss
+++ b/web/src/styles/widgets/_messenger.scss
@@ -13,6 +13,7 @@
       font-family: var(--lf-font-family-primary);
       font-size: var(--lf-font-size);
       left: 0;
+      overflow: hidden;
       position: absolute;
       text-align: center;
       top: 0;
